--- a/weatherBySteven/index.html
+++ b/weatherBySteven/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="./src/assets/wbsICON.ico" />
+    <script src="https://kit.fontawesome.com/6a8f656999.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weatherBySteven</title>
   </head>
